sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:3: error: not found: value p
	while (p<getNombreValeurs()-2){
               ^AlgBubbleSort1:8: error: reassignment to val
			k = p
                          ^